fixed horizontal scrollbar shift

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,10 @@ font-family:LatoBold;
 src: url('./Fonts/Lato/Lato-Bold.tff');
 }
 
+html {
+	overflow-y: scroll;
+}
+
 #pageContent {
 	margin-top:10%;
 }
@@ -27,6 +31,7 @@ src: url('./Fonts/Lato/Lato-Bold.tff');
 }
 
 #header {
+	overflow:auto;
 	width:100%;
 	background-color: rgba(255,255,255,0.95);
 	top:0px;
